# plumb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  smoke_test.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
bench/: benchmark_eplb_concurrent.py  benchmark_placement_3way.py  collect_snapshot.py  expert_heatmap.py  gen_charts.py  resume_bench.py  setup_instance.sh  sharegpt_moe_bench.py  vast_bench_run.md  vast_bench_run.sh
bench/charts/: plot_results.py
bench/results/: REPORT.md  REPORT_v2.md  TEST_REPORT.md  eplb_comparison_20260515.json  olmoe_1b7b_eplb_concurrent_tp2_20260515.json  olmoe_1b7b_eplb_ep4_20260515.json  olmoe_1b7b_tp2_hook_toggle_20260514.json
bench/results/vast-20260520-171208/: phase1_benchmark.json  summary.json
docs/benchmarks/: deepseek-v3-synthetic.json  mixtral-8x7b-synthetic.json
numa_topology/: README.md  __init__.py  gpu_capabilities.py  pcie.py  pyproject.toml
plumb/: __init__.py  autoattach.py  cli.py  counter.py  diff.py  hook.py  launcher.py  registry.py  scanner.py  session.py  topology.py
plumb/_sitecustomize/: sitecustomize.py
plumb/analysis/: coactivation.py  comms.py  heterogeneous.py  imbalance.py  numa.py  placement.py
plumb/dashboard/: server.py
plumb/dashboard/static/: index.html
plumb/exporters/: gpu_stats.py  prometheus.py
plumb/report/: diff_html.py  generator.py  html.py  schema.py
plumb/simulation/: __init__.py  activation_gen.py
plumb/tools/: reorder_experts.py
tests/: test_autoattach.py  test_cli.py  test_counter.py  test_diff.py  test_gpu_capabilities.py  test_gpu_chart_and_html_export.py  test_gpu_stats.py  test_hook.py  test_launcher.py  test_missing_claims.py  test_placement.py  test_prometheus.py  test_report.py  test_rocm.py  test_scanner.py  test_topology.py
tests/analysis/: test_coactivation.py  test_comms.py  test_heterogeneous.py  test_imbalance.py  test_numa.py
tests/fixtures/activation-reference/: deepseek-v3.json  mixtral-8x7b.json
tests/fixtures/topologies/: dual-epyc-8x-h100-pcie.json  dual-epyc-8x-h100-sxm.json  single-epyc-4x-a100-pcie.json
tests/integration/: test_pipeline.py
tests/simulation/: test_activation_gen.py
