[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plumb-moe"
version = "0.1.0"
description = "MoE inference profiler — expert activation analysis and topology-aware placement for vLLM and HuggingFace Transformers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["moe", "mixture-of-experts", "vllm", "inference", "profiling", "llm", "deepseek", "mixtral"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "numpy>=1.26",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/plumb-moe/plumb"
Repository = "https://github.com/plumb-moe/plumb"
Issues = "https://github.com/plumb-moe/plumb/issues"

[project.scripts]
plumb = "plumb.cli:main"

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
eplb = [
    # deepseek-ai/EPLB has no Python package; install manually if needed:
    # pip install git+https://github.com/deepseek-ai/EPLB.git
]
prometheus = [
    "prometheus-client>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pip-audit",
    "prometheus-client>=0.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["plumb", "numa_topology"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that spawn subprocesses or require a real GPU environment (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length — enforced by formatter, not a CI blocker

[tool.ruff.lint.per-file-ignores]
# Tests use single-letter variables in numerical/matrix code and occasionally
# import fixtures at module level after config.
"tests/**/*.py" = ["E741", "E402", "F841", "E731"]
# Benchmark scripts are standalone runners, not library code.
"bench/**/*.py" = ["E741", "E402", "E731", "E702", "F841"]
# Smoke test intentionally structures its imports after inline config.
"smoke_test.py" = ["E402", "F401"]

[tool.mypy]
python_version = "3.10"
strict = true
