[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numa-topology"
version = "0.1.0"
description = "Discover GPU NUMA affinity via sysfs — zero dependencies beyond stdlib and nvidia-smi"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["gpu", "numa", "topology", "vllm", "pytorch", "sglang", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]

# Zero pip dependencies — nvidia-smi is a system tool, PyTorch is optional
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev   = ["pytest>=8.0"]

[project.urls]
Homepage   = "https://github.com/plumb-moe/plumb"
Repository = "https://github.com/plumb-moe/plumb"

[tool.hatch.build.targets.wheel]
packages = ["numa_topology"]
